parslers-benchmark/src/tests/invalid/syntaxErr/modules/illegal_path.wacc
mod this/is/illegal�;

begin
    skip
end